Fix no padding on mobile

--- a/water.css
+++ b/water.css
@@ -4,6 +4,7 @@ body {
 
   max-width: 800px;
   margin: 20px auto;
+  padding: 0 10px;
 
   color: #dbdbdb;
   background: #202b38;
